--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
     "$schema": "https://json.schemastore.org/lintstagedrc.schema.json",
-    "*.{js,ts}": "npx eslint --fix --ext ts,js"
+    "lib/**": "eslint --jsx --ext .js,.ts,.tsx --fix"
 }
