--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "Zaid \"Nico\" <contact@nico.engineer>",
     "scripts": {
         "build": "pnpm recursive run build",
-        "lint": "eslint packages/ scripts/",
+        "lint": "eslint packages/ scripts/ apps/",
         "lint:fix": "pnpm run lint --fix",
         "docs": "rimraf docs && typedoc && ts-node scripts/post-docs.ts",
         "test": "nyc mocha -r ts-node/register ./packages/**/__tests__/*.test.ts",
@@ -26,15 +26,10 @@
         "@types/mocha": "9.1.1",
         "@types/node": "16.18.3",
         "@types/rimraf": "3.0.2",
-        "@typescript-eslint/eslint-plugin": "5.45.0",
-        "@typescript-eslint/parser": "5.45.0",
         "chai": "4.3.7",
         "dotenv": "16.0.3",
         "eslint": "8.28.0",
-        "eslint-config-prettier": "8.5.0",
-        "eslint-plugin-prettier": "4.2.1",
-        "eslint-plugin-simple-import-sort": "^8.0.0",
-        "eslint-plugin-unused-imports": "^2.0.0",
+        "eslint-config-neon": "^0.1.40",
         "gen-esm-wrapper": "1.1.3",
         "husky": "7.0.4",
         "lint-staged": "13.0.4",
