--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,13 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig.json",
     "extends": "./tsconfig.json",
-    "include": ["packages", "services", "scripts", "examples"]
+    "compilerOptions": {
+        "jsx": "preserve"
+    },
+    "include": [
+        "packages",
+        "services",
+        "scripts",
+        "examples"
+    ]
 }
