--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,14 +8,18 @@
     "start": "next start"
   },
   "devDependencies": {
-      "@types/node": "18.11.9",
-      "@types/react": "18.0.25",
-      "@types/react-dom": "18.0.9",
-      "typescript": "4.9.3"
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.3"
   },
   "dependencies": {
     "next": "13.0.5",
     "react": "18.2.0",
+    "react-code-blocks": "0.0.9-0",
     "react-dom": "18.2.0"
   }
 }
