--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
             - main
         paths:
             - "packages/**"
+            - "apps/**"
+            - "services/**"
             - "typedoc.json"
     pull_request:
 
