--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "typeRoots": ["node_modules/@types"],
         "types": ["node", "mocha"],
         "sourceMap": true,
+				"jsx": "react-jsx",
         "incremental": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
