--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "typedoc": "0.23.21",
     "typescript": "4.9.3"
   },
   "dependencies": {
